[workspace]
members = [
    "core",
    "arm7tdmi",
    "frontend",
]

default-members = ["frontend"]
resolver = "1"

[profile.dev]
opt-level = 2
debug = true

[profile.release]
debug = false

[profile.release-dev]
inherits = "release"
opt-level = 3
debug = true
debug-assertions = false

[profile.release-lto]
inherits = "release"
lto = true
